memory_game/css/style.css
body {
text-align: center;
}

header {
	background-color: #F15B31;
	color: #FFFFFF;
	padding: 30px 20px;
	margin:0;
}

nav {
	background-color: #00A6B3; 
	color: #FFFFFF;
	padding:20px;
}

main {
	width: 850px;
	margin: 35px auto;
}

h1 {
font-family: "Raleway", sans-serif;
color: #0D2C40;
font-weight: 400;
font-size:45px;
margin:0;
}

h2 {
font-family: "Raleway", sans-serif;
color: #F15B31;
letter-spacing: 1px;
font-weight: 600;
font-size:18px;
text-transform: uppercase;
display: inline-block;
}

h3 {
font-family: "Raleway", sans-serif;
color: #0D2C40;
letter-spacing: 1px;
font-weight: 600;
font-size:20px;
text-transform: uppercase;
}

p {
font-family: "Droid Serif", serif;
line-height: 26px;
font-size: 18px;
}

a {
border-bottom: 2px solid transparent;
margin: 0px 20px;
color:white;
text-decoration: none;
}

a:hover {
border-color: white;
}

img {
	max-width: 160px;
	margin: 50px 15px;
	border-radius: 10px;
}

.zoom {
  transition: transform .4s;
}

.zoom:hover {
  transform: scale(1.08); 
}

footer {
text-transform:uppercase;
padding:0px 20px;
background-color:#0D2C40;
color: white;
font-size:14px;
letter-spacing: .08em;
font-weight:500;
font-family: Raleway;
}

.copyright {
	float: left;
}

.message {
	float: right;
}

.clearfix:after {
visibility: hidden;
display: block;
content: " ";
clear: both;
height: 0;
font-size: 0;
}

.name {
color: #F15B31;
font-weight: 700;
}

a:hover {
/* Your styles here */
}

